updated some and fixes